--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,26 +44,45 @@
 
 html,
 body {
-  background: var(--color-background);
-  color: var(--color-on-background);
+  @apply bg-background text-on-background;
   transition: background-color 0.3s ease-in-out;
 }
 
 a, a:visited {
-  color: var(--color-secondary);
+  @apply text-secondary no-underline;
   text-decoration: none;
 }
 a:hover {
-  color: var(--color-secondary-alt);
-  text-decoration: underline;
+  @apply text-secondary-alt underline;
+}
+
+h1 {
+  @apply text-4xl font-bold;
+}
+h2 {
+  @apply text-3xl font-bold;
+}
+h3 {
+  @apply text-2xl font-bold;
+}
+h4 {
+  @apply text-xl font-bold;
+}
+h5 {
+  @apply text-lg font-bold;
+}
+h6 {
+  @apply text-base font-bold;
+}
+
+small {
+  @apply text-sm;
 }
 
 ::-moz-selection { /* Code for Firefox */
-  color: var(--color-secondary);
-  background: var(--color-primary);
+  @apply text-on-primary bg-primary;
 }
 
 ::selection {
-  color: var(--color-secondary);
-  background: var(--color-primary);
+  @apply text-on-primary bg-primary;
 }
