--- a/src/styles/content.module.css
+++ b/src/styles/content.module.css
@@ -1,7 +1,41 @@
+.content {
+  @apply py-5 px-10 flex flex-col items-center
+}
 .content p {
-  @apply py-1
+  @apply py-2
 }
 
 .content ul {
-  @apply list-disc list-inside
+  @apply list-disc list-inside pl-5
+}
+
+.content ol {
+  @apply list-decimal list-inside pl-5
+}
+
+.content ol li, .content ul li {
+  @apply py-1
+}
+
+.content blockquote {
+  @apply pl-5 py-2 italic
+}
+
+.content > p, .content > ul, .content > ol, .content > blockquote, .content > h1, .content > h2, .content > h3, .content > h4, .content > h5, .content > h6 {
+  @apply w-full max-w-[700px]
+}
+
+.content > h1, .content > h2, .content > h3 {
+  @apply my-3
+}
+
+.content > h4, .content > h5, .content > h6 {
+  @apply my-2
+}
+
+.content > table {
+  @apply table-auto border-separate border-spacing-2
+}
+.content > table th, .content > table td {
+  @apply border-b-on-background border-b 
 }
