--- a/src/styles/content.module.css
+++ b/src/styles/content.module.css
@@ -1,5 +1,5 @@
 .content {
-  @apply py-5 px-10 flex flex-col items-center
+  @apply py-5 px-3 md:px-10 flex flex-col items-center
 }
 .content p {
   @apply py-2
@@ -33,9 +33,14 @@
   @apply my-2
 }
 
-.content > table {
+.content :global(.table-container) {
+  @apply max-w-full overflow-x-auto
+}
+
+.content :global(.table-container) > table {
   @apply table-auto border-separate border-spacing-2
 }
-.content > table th, .content > table td {
-  @apply border-b-on-background border-b 
+.content :global(.table-container) > table th,
+.content :global(.table-container) > table td {
+  @apply border-b-on-background border-b
 }
