--- a/src/styles/themes/light.css
+++ b/src/styles/themes/light.css
@@ -35,6 +35,7 @@
     /* Borders */
     --color-hr-primary: #e07b37; /* Muted amber-orange for primary borders */
     --color-hr-secondary: #006964; /* Darker teal for secondary borders */
+    --color-hr-tertiary: #e24748; /* Muted coral-red for tertiary borders */
     --color-hr-surface: #cdd2d8; /* Light gray for surface borders */
     --color-hr-surface-alt: #b4bac0; /* Darker gray for alt surfaces */
 }
