--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -1,9 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-@import "themes/dark.css";
-@import "themes/light.css";
+@import "./themes/dark.css";
+@import "./themes/light.css";
 
 html,
 body {
