--- a/packages/ui/src/styles/globals.css
+++ b/packages/ui/src/styles/globals.css
@@ -1,7 +1,5 @@
 @import "tailwindcss";
-
-@import "./themes/dark.css";
-@import "./themes/light.css";
+@import "./themes/index.css";
 
 html,
 body {
