--- a/packages/ui/src/styles/content.module.css
+++ b/packages/ui/src/styles/content.module.css
@@ -1,5 +1,5 @@
 @reference "tailwindcss";
-@reference "./globals.css";
+@reference "./global.css";
 
 .content {
   @apply py-5 px-3 md:px-10 flex flex-col items-center
