--- a/packages/ui-lib/src/styles/global.css
+++ b/packages/ui-lib/src/styles/global.css
@@ -14,6 +14,14 @@ a, a:visited {
 a:hover {
   @apply text-primary-alt;
 }
+a.as-text, a.as-text:visited {
+  @apply no-underline;
+  color: inherit;
+  text-decoration: none;
+}
+a.as-text:hover {
+  @apply text-primary;
+}
 
 h1 {
   @apply text-4xl font-semibold;
@@ -39,13 +47,13 @@ small {
 }
 
 ::-moz-selection { /* Code for Firefox */
-  @apply text-on-primary bg-primary;
+  @apply text-on-tertiary bg-tertiary;
 }
 
 ::selection {
-  @apply text-on-primary bg-primary;
+  @apply text-on-tertiary bg-tertiary;
 }
 
 mark {
-  @apply text-on-primary bg-primary;
+  @apply text-on-tertiary bg-tertiary;
 }
